1.5.0
OpensearchNamespaceContext merget fra branch 1.4 til head
   - bug [12320] "Problem med dannelse af FedoraPid i ForceFedoraPid"