@@ -1,3 +1,4 @@
 1.5.0
+   - bug [12371] "Datadock dør med outOfMemoryException"
 OpensearchNamespaceContext merget fra branch 1.4 til head
    - bug [12320] "Problem med dannelse af FedoraPid i ForceFedoraPid"
